// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`introspection: create bigint data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model migrate {
  version BigInt @id
}

`;

exports[`introspection: create bigint data: warnings 1`] = `null`;

exports[`introspection: create with data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id   Int    @id @default(autoincrement())
  name String @unique
}

`;

exports[`introspection: create with data: warnings 1`] = `null`;

exports[`introspection: create with empty data and SQL default: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id   Int    @id @default(autoincrement())
  name String @default("alice")
}

`;

exports[`introspection: create with empty data and SQL default: warnings 1`] = `null`;

exports[`introspection: delete where composite PK: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

`;

exports[`introspection: delete where composite PK: warnings 1`] = `null`;

exports[`introspection: delete where composite unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model users {
  id    Int    @id @default(autoincrement())
  email String
  name  String

  @@unique([email, name])
}

`;

exports[`introspection: delete where composite unique: warnings 1`] = `null`;

exports[`introspection: deleteMany where enum - check count: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int          @id @default(autoincrement())
  title     String
  published posts_status @default(DRAFT)
}

enum posts_status {
  DRAFT
  PUBLISHED
}

`;

exports[`introspection: deleteMany where enum - check count: warnings 1`] = `null`;

exports[`introspection: deleteMany where enum - check findMany: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int          @id @default(autoincrement())
  title     String
  published posts_status @default(DRAFT)
}

enum posts_status {
  DRAFT
  PUBLISHED
}

`;

exports[`introspection: deleteMany where enum - check findMany: warnings 1`] = `null`;

exports[`introspection: findMany - default enum: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int          @id @default(autoincrement())
  title     String
  published posts_status @default(DRAFT)
}

enum posts_status {
  DRAFT
  PUBLISHED
}

`;

exports[`introspection: findMany - default enum: warnings 1`] = `null`;

exports[`introspection: findMany - email text: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model users {
  id    Int     @id @default(autoincrement())
  email String?
}

`;

exports[`introspection: findMany - email text: warnings 1`] = `null`;

exports[`introspection: findMany - email varchar(50) not null unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model users {
  id    Int    @id @default(autoincrement())
  email String @unique
}

`;

exports[`introspection: findMany - email varchar(50) not null unique: warnings 1`] = `null`;

exports[`introspection: findMany on column_name_that_becomes_empty_string: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model column_name_that_becomes_empty_string {
  field1 Int @id @default(autoincrement())
  /// This field was commented out because of an invalid name. Please provide a valid one that matches [a-zA-Z][a-zA-Z0-9_]*
  // 12345 Int? @map("12345")
}

model invalid_enum_value_name {
  field1       Int           @id @default(autoincrement())
  here_be_enum invalid_enum?
}

/// The underlying table does not contain a valid unique identifier and can therefore currently not be handled by Prisma Client.
model no_unique_identifier {
  field1 Int?
  field2 Int?

  @@ignore
}

model unsupported_type {
  field1      Int                     @id @default(autoincrement())
  unsupported Unsupported("polygon")?
}

enum invalid_enum {
  Y
  N
  // 123 @map("123")
  // $§! @map("$§!")
}

`;

exports[`introspection: findMany on column_name_that_becomes_empty_string: warnings 1`] = `
*** WARNING ***

These fields were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` attribute:
  - Model: "column_name_that_becomes_empty_string", field(s): ["12345"]

These enum values were commented out because their names are currently not supported by Prisma. Please provide valid ones that match [a-zA-Z][a-zA-Z0-9_]* using the \`@map\` attribute:
  - Enum: "invalid_enum", value: "123"
  - Enum: "invalid_enum", value: "$§!"

The following models were ignored as they do not have a valid unique identifier or id. This is currently not supported by Prisma Client:
  - "no_unique_identifier"

These fields are not supported by Prisma Client, because Prisma currently does not support their types:
  - Model: "unsupported_type", field: "unsupported", original data type: "polygon"

`;

exports[`introspection: findMany orderBy asc: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int     @id @default(autoincrement())
  title     String
  published Boolean @default(false)
}

`;

exports[`introspection: findMany orderBy asc: warnings 1`] = `null`;

exports[`introspection: findMany orderBy desc: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int     @id @default(autoincrement())
  title     String
  published Boolean @default(false)
}

`;

exports[`introspection: findMany orderBy desc: warnings 1`] = `null`;

exports[`introspection: findMany where - case insensitive field: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model users {
  id    Int    @id @default(autoincrement())
  email String @unique @postgresql.Citext
}

`;

exports[`introspection: findMany where - case insensitive field: warnings 1`] = `null`;

exports[`introspection: findMany where OR[contains, contains] : datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int     @id @default(autoincrement())
  title     String
  published Boolean @default(false)
}

`;

exports[`introspection: findMany where OR[contains, contains] : warnings 1`] = `null`;

exports[`introspection: findMany where contains and boolean: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int     @id @default(autoincrement())
  title     String
  published Boolean @default(false)
}

`;

exports[`introspection: findMany where contains and boolean: warnings 1`] = `null`;

exports[`introspection: findMany where contains: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model crons {
  id        Int     @id @default(autoincrement())
  job       String  @unique
  frequency String?
}

`;

exports[`introspection: findMany where contains: warnings 1`] = `null`;

exports[`introspection: findMany where datetime exact: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model events {
  id   Int       @id @default(autoincrement())
  time DateTime? @postgresql.Timestamptz(6)
}

`;

exports[`introspection: findMany where datetime exact: warnings 1`] = `null`;

exports[`introspection: findMany where datetime gt: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model events {
  id   Int       @id @default(autoincrement())
  time DateTime? @postgresql.Timestamptz(6)
}

`;

exports[`introspection: findMany where datetime gt: warnings 1`] = `null`;

exports[`introspection: findMany where datetime gte: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model events {
  id   Int       @id @default(autoincrement())
  time DateTime? @postgresql.Timestamptz(6)
}

`;

exports[`introspection: findMany where datetime gte: warnings 1`] = `null`;

exports[`introspection: findMany where datetime lt: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model events {
  id   Int       @id @default(autoincrement())
  time DateTime? @postgresql.Timestamptz(6)
}

`;

exports[`introspection: findMany where datetime lt: warnings 1`] = `null`;

exports[`introspection: findMany where datetime lte - check instanceof Date: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id         Int      @id @default(autoincrement())
  title      String
  created_at DateTime @default(now()) @postgresql.Timestamp(6)
}

`;

exports[`introspection: findMany where datetime lte - check instanceof Date: warnings 1`] = `null`;

exports[`introspection: findMany where datetime lte: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model events {
  id   Int       @id @default(autoincrement())
  time DateTime? @postgresql.Timestamptz(6)
}

`;

exports[`introspection: findMany where datetime lte: warnings 1`] = `null`;

exports[`introspection: findMany where datetime not: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model events {
  id   Int       @id @default(autoincrement())
  time DateTime? @postgresql.Timestamptz(6)
}

`;

exports[`introspection: findMany where datetime not: warnings 1`] = `null`;

exports[`introspection: findMany where decimal: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model exercises {
  id       Int     @id @default(autoincrement())
  distance Decimal @postgresql.Decimal(5, 3)
}

`;

exports[`introspection: findMany where decimal: warnings 1`] = `null`;

exports[`introspection: findMany where empty in[]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id    Int    @id @default(autoincrement())
  token Int    @unique
  name  String
}

`;

exports[`introspection: findMany where empty in[]: warnings 1`] = `null`;

exports[`introspection: findMany where empty notIn[]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id    Int    @id @default(autoincrement())
  token Int    @unique
  name  String
}

`;

exports[`introspection: findMany where empty notIn[]: warnings 1`] = `null`;

exports[`introspection: findMany where endsWith: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model crons {
  id        Int     @id @default(autoincrement())
  job       String  @unique
  frequency String?
}

`;

exports[`introspection: findMany where endsWith: warnings 1`] = `null`;

exports[`introspection: findMany where id empty in[] and token in[]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id    Int    @id @default(autoincrement())
  token Int    @unique
  name  String
}

`;

exports[`introspection: findMany where id empty in[] and token in[]: warnings 1`] = `null`;

exports[`introspection: findMany where in[integer]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id    Int    @id @default(autoincrement())
  token Int    @unique
  name  String
}

`;

exports[`introspection: findMany where in[integer]: warnings 1`] = `null`;

exports[`introspection: findMany where in[string]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model crons {
  id        Int     @id @default(autoincrement())
  job       String  @unique
  frequency String?
}

`;

exports[`introspection: findMany where in[string]: warnings 1`] = `null`;

exports[`introspection: findMany where notIn[]: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id    Int    @id @default(autoincrement())
  token Int    @unique
  name  String
}

`;

exports[`introspection: findMany where notIn[]: warnings 1`] = `null`;

exports[`introspection: findMany where null: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model events {
  id   Int       @id @default(autoincrement())
  time DateTime? @postgresql.Timestamptz(6)
}

`;

exports[`introspection: findMany where null: warnings 1`] = `null`;

exports[`introspection: findMany where startsWith: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model crons {
  id        Int     @id @default(autoincrement())
  job       String  @unique
  frequency String?
}

`;

exports[`introspection: findMany where startsWith: warnings 1`] = `null`;

exports[`introspection: findMany where timestamp gt than now: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id         Int      @id @default(autoincrement())
  title      String
  created_at DateTime @default(now()) @postgresql.Timestamp(6)
}

`;

exports[`introspection: findMany where timestamp gt than now: warnings 1`] = `null`;

exports[`introspection: findMany where timestamp gte than now: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id         Int      @id @default(autoincrement())
  title      String
  created_at DateTime @default(now()) @postgresql.Timestamp(6)
}

`;

exports[`introspection: findMany where timestamp gte than now: warnings 1`] = `null`;

exports[`introspection: findMany where timestamp lt than now: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id         Int      @id @default(autoincrement())
  title      String
  created_at DateTime @default(now()) @postgresql.Timestamp(6)
}

`;

exports[`introspection: findMany where timestamp lt than now: warnings 1`] = `null`;

exports[`introspection: findMany where unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model users {
  id    Int    @id @default(autoincrement())
  email String @unique
}

`;

exports[`introspection: findMany where unique: warnings 1`] = `null`;

exports[`introspection: findUnique - check typeof Date is string for Json field: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id    Int    @id @default(autoincrement())
  title String
  data  Json?
}

`;

exports[`introspection: findUnique - check typeof Date is string for Json field: warnings 1`] = `null`;

exports[`introspection: findUnique - check typeof array for Json field with array: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id    Int    @id @default(autoincrement())
  title String
  data  Json
}

`;

exports[`introspection: findUnique - check typeof array for Json field with array: warnings 1`] = `null`;

exports[`introspection: findUnique - check typeof js object is object for Json field: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id    Int    @id @default(autoincrement())
  title String
  data  Json?
}

`;

exports[`introspection: findUnique - check typeof js object is object for Json field: warnings 1`] = `null`;

exports[`introspection: findUnique where PK with include: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id      Int    @id @default(autoincrement())
  user_id Int
  title   String
  users   users  @relation(fields: [user_id], references: [id], onDelete: NoAction)
}

model users {
  id    Int     @id @default(autoincrement())
  email String  @unique
  posts posts[]
}

`;

exports[`introspection: findUnique where PK with include: warnings 1`] = `null`;

exports[`introspection: findUnique where PK with select: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id    Int    @id
  name  String @unique
  email String @unique
}

`;

exports[`introspection: findUnique where PK with select: warnings 1`] = `null`;

exports[`introspection: findUnique where PK: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id   Int    @id
  name String @unique
}

`;

exports[`introspection: findUnique where PK: warnings 1`] = `null`;

exports[`introspection: findUnique where composite PK with foreign key: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model a {
  one Int
  two Int
  b   b[]

  @@id([one, two])
}

model b {
  id  Int @id @default(autoincrement())
  one Int
  two Int
  a   a   @relation(fields: [one, two], references: [one, two], onDelete: NoAction, onUpdate: NoAction, map: "b_one_fkey")
}

`;

exports[`introspection: findUnique where composite PK with foreign key: warnings 1`] = `null`;

exports[`introspection: findUnique where composite PK: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

`;

exports[`introspection: findUnique where composite PK: warnings 1`] = `null`;

exports[`introspection: findUnique where composite unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model users {
  id    Int    @id @default(autoincrement())
  email String
  name  String

  @@unique([email, name])
}

`;

exports[`introspection: findUnique where composite unique: warnings 1`] = `null`;

exports[`introspection: findUnique where decimal - default value: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model exercises {
  id       Int     @id @default(autoincrement())
  distance Decimal @unique @default(12.3) @postgresql.Decimal(5, 3)
}

`;

exports[`introspection: findUnique where decimal - default value: warnings 1`] = `null`;

exports[`introspection: findUnique where decimal: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model exercises {
  id       Int     @id @default(autoincrement())
  distance Decimal @unique @postgresql.Decimal(5, 3)
}

`;

exports[`introspection: findUnique where decimal: warnings 1`] = `null`;

exports[`introspection: findUnique where unique composite (PK is a composite): datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
  @@unique([value, email])
}

`;

exports[`introspection: findUnique where unique composite (PK is a composite): warnings 1`] = `null`;

exports[`introspection: findUnique where unique composite: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model variables {
  id    Int    @id @default(autoincrement())
  name  String
  key   String
  value String
  email String

  @@unique([name, key])
}

`;

exports[`introspection: findUnique where unique composite: warnings 1`] = `null`;

exports[`introspection: findUnique where unique with foreign key and unpack: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id      Int    @id @default(autoincrement())
  user_id Int
  title   String
  users   users  @relation(fields: [user_id], references: [id], onDelete: NoAction)
}

model users {
  id    Int     @id @default(autoincrement())
  email String  @unique
  posts posts[]
}

`;

exports[`introspection: findUnique where unique with foreign key and unpack: warnings 1`] = `null`;

exports[`introspection: findUnique where unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model users {
  id    Int    @id @default(autoincrement())
  email String @unique
}

`;

exports[`introspection: findUnique where unique: warnings 1`] = `null`;

exports[`introspection: update where composite PK: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

`;

exports[`introspection: update where composite PK: warnings 1`] = `null`;

exports[`introspection: update where composite unique: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model users {
  id    Int    @id @default(autoincrement())
  email String
  name  String

  @@unique([email, name])
}

`;

exports[`introspection: update where composite unique: warnings 1`] = `null`;

exports[`introspection: update where integer data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id    Int @id @default(autoincrement())
  token Int @unique
}

`;

exports[`introspection: update where integer data: warnings 1`] = `null`;

exports[`introspection: update where with boolean data and select: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id     Int     @id @default(autoincrement())
  name   String  @unique
  active Boolean @default(true)
}

`;

exports[`introspection: update where with boolean data and select: warnings 1`] = `null`;

exports[`introspection: update where with boolean data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id     Int     @id @default(autoincrement())
  name   String  @unique
  active Boolean @default(true)
}

`;

exports[`introspection: update where with boolean data: warnings 1`] = `null`;

exports[`introspection: update where with numeric data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id   Int    @id @default(autoincrement())
  name String @unique
}

`;

exports[`introspection: update where with numeric data: warnings 1`] = `null`;

exports[`introspection: update where with string data: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id   Int    @id @default(autoincrement())
  name String @unique
}

`;

exports[`introspection: update where with string data: warnings 1`] = `null`;

exports[`introspection: update with data - not null enum - check findMany: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int          @id @default(autoincrement())
  title     String
  published posts_status @default(DRAFT)
}

enum posts_status {
  DRAFT
  PUBLISHED
}

`;

exports[`introspection: update with data - not null enum - check findMany: warnings 1`] = `null`;

exports[`introspection: update with data - not null enum: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int          @id @default(autoincrement())
  title     String
  published posts_status @default(DRAFT)
}

enum posts_status {
  DRAFT
  PUBLISHED
}

`;

exports[`introspection: update with data - not null enum: warnings 1`] = `null`;

exports[`introspection: updateMany where null - check findMany: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id   Int     @id @default(autoincrement())
  name String?
}

`;

exports[`introspection: updateMany where null - check findMany: warnings 1`] = `null`;

exports[`introspection: updateMany where with string data - check findMany: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id   Int    @id @default(autoincrement())
  name String
}

`;

exports[`introspection: updateMany where with string data - check findMany: warnings 1`] = `null`;

exports[`introspection: updateMany where with string data - check returned count: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model teams {
  id   Int    @id @default(autoincrement())
  name String
}

`;

exports[`introspection: updateMany where with string data - check returned count: warnings 1`] = `null`;

exports[`introspection: updateMany with data - not null enum - check count: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int          @id @default(autoincrement())
  title     String
  published posts_status @default(DRAFT)
}

enum posts_status {
  DRAFT
  PUBLISHED
}

`;

exports[`introspection: updateMany with data - not null enum - check count: warnings 1`] = `null`;

exports[`introspection: upsert (create): datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int     @id @default(autoincrement())
  title     String
  published Boolean @default(false)
}

`;

exports[`introspection: upsert (create): warnings 1`] = `null`;

exports[`introspection: upsert (update): datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model posts {
  id        Int     @id @default(autoincrement())
  title     String
  published Boolean @default(false)
}

`;

exports[`introspection: upsert (update): warnings 1`] = `null`;

exports[`introspection: upsert where composite PK - create: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

`;

exports[`introspection: upsert where composite PK - create: warnings 1`] = `null`;

exports[`introspection: upsert where composite PK - update: datamodel 1`] = `
generator client {
  provider = "prisma-client-js"
  output = "***"
}

datasource postgresql {
  provider = "postgresql"
  url = "***"
}

model variables {
  name  String
  key   String
  value String
  email String

  @@id([name, key])
}

`;

exports[`introspection: upsert where composite PK - update: warnings 1`] = `null`;
